# Silver-Smelter

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/silver_smelter/core/: block.hpp
include/silver_smelter/crypto/: sha256.hpp
include/silver_smelter/miner/: worker.hpp
include/silver_smelter/net/: stratum.hpp  v2_protocol.hpp
include/silver_smelter/util/: log.hpp
src/: main.cpp
src/core/: block.cpp
src/crypto/: sha256.cpp
src/miner/: worker.cpp
src/net/: stratum.cpp
src/util/: log.cpp
